added not found,fixed loader and a bit of styles

--- a/src/pages/Menus/MenusNeon.module.css
+++ b/src/pages/Menus/MenusNeon.module.css
@@ -3,10 +3,12 @@
 .menuHeader {
   filter: brightness(0.9);
 }
-
 .menuDetails li {
   color: var(--brand-color-1);
-  font-weight: 500;
+}
+
+.menuDetails li span {
+  font-weight: 700;
   border-bottom: 0.5px solid var(--brand-color-1);
   text-shadow: 2px 2px 5px var(--shadow-subtle-text);
 }
