--- a/src/pages/StartingWizard/StartingWizard.module.css
+++ b/src/pages/StartingWizard/StartingWizard.module.css
@@ -1,7 +1,7 @@
 .wizardContainer {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   justify-content: center;
 }
 
