--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   --border-radius-button: 5px;
 
   /* text */
-  --text-color-main: rgba(255, 255, 255, 0.87);
+  --text-color-main: #ffffffde;
   --text-color-secondary: rgba(255, 255, 255, 0.7);
 
   /* SHADOW */
