--- a/src/index.css
+++ b/src/index.css
@@ -36,18 +36,29 @@ body {
   color: var(--text-color-main);
   background-color: var(--app-background-color);
   font-family: "Raleway", sans-serif;
-  max-width: 100rem;
+  max-width: 70rem;
   margin: 0 auto;
 }
 
 button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+button:hover,
+a:hover {
+  scale: 1.1;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+  transition: all 0.2s;
+}
+a:hover {
+  background-color: none;
 }
 
 ul,
@@ -65,6 +76,6 @@ select:focus {
 
 @media screen and (min-width: 768px) {
   html {
-    font-size: 72.5%;
+    font-size: 75.5%;
   }
 }
