--- a/src/pages/Menus/MenusCommon.module.css
+++ b/src/pages/Menus/MenusCommon.module.css
@@ -52,7 +52,9 @@
   font-size: 1.4rem;
   font-style: italic;
 }
-
+.menuDetails li:hover {
+  scale: 1.1;
+}
 /* MENU ITEMS */
 .container {
   padding: 2rem;
@@ -102,6 +104,10 @@
 }
 .menuList li a {
   width: 100%;
+}
+
+.menuList li a:hover {
+  scale: 1.1;
 }
 
 /* CATEGORY INDIVIDUAL ITEM */
@@ -230,13 +236,18 @@
   gap: 2rem;
   border-radius: 5px;
   overflow: hidden;
-  min-width: 30rem;
 }
 
 .itemViewImage {
   height: 200px;
   width: 40%;
   object-fit: cover;
+  min-width: 10rem;
+}
+
+.filler {
+  height: 200px;
+  min-width: 10rem;
 }
 
 .itemViewContainer h3 {
@@ -280,6 +291,7 @@
   flex-direction: column;
   gap: 1.5rem;
   font-size: 1.6rem;
+  max-width: 50rem;
 }
 
 .infoContainer {
