added mark items as sold functionality

--- a/src/pages/Menus/MenusCommon.module.css
+++ b/src/pages/Menus/MenusCommon.module.css
@@ -173,6 +173,10 @@
   font-weight: 300;
 }
 
+.soldOutImage {
+  filter: opacity(70%);
+}
+
 /* MODAL WINDOW STYLES */
 .modal {
   position: fixed;
