--- a/src/pages/Menus/MenusCommon.module.css
+++ b/src/pages/Menus/MenusCommon.module.css
@@ -174,7 +174,12 @@
 }
 
 .soldOutImage {
+  filter: opacity(60%);
+}
+
+.soldTitle {
   filter: opacity(70%);
+  text-decoration: line-through;
 }
 
 /* MODAL WINDOW STYLES */
